c_headers/H5Opublic.h

#  define libname "libhdf5.so"
 herr_t H5Oclose(hid_t object_id);
 herr_t H5Oflush(hid_t obj_id);
 herr_t H5Orefresh(hid_t oid);
 herr_t H5Odisable_mdc_flushes(hid_t object_id);
 herr_t H5Oenable_mdc_flushes(hid_t object_id);
 herr_t H5Oare_mdc_flushes_disabled(hid_t object_id, hbool_t *are_disabled);
/* Macros */

/* Typedefs */

/* A struct that's part of the H5G_stat_t structure (deprecated) */
typedef struct H5O_stat_t {
    hsize_t size;               /* Total size of object header in file */
    hsize_t free;               /* Free space within object header */
    unsigned nmesgs;            /* Number of object header messages */
    unsigned nchunks;           /* Number of object header chunks */
} H5O_stat_t;