src/nimhdf5/wrapper/H5Opublic.nim


proc H5Oclose*(object_id: hid_t): herr_t {.cdecl, importc: "H5Oclose", dynlib: libname.}
proc H5Oflush*(obj_id: hid_t): herr_t {.cdecl, importc: "H5Oflush", dynlib: libname.}
proc H5Orefresh*(oid: hid_t): herr_t {.cdecl, importc: "H5Orefresh", dynlib: libname.}
proc H5Odisable_mdc_flushes*(object_id: hid_t): herr_t {.cdecl,
    importc: "H5Odisable_mdc_flushes", dynlib: libname.}
proc H5Oenable_mdc_flushes*(object_id: hid_t): herr_t {.cdecl,
    importc: "H5Oenable_mdc_flushes", dynlib: libname.}
proc H5Oare_mdc_flushes_disabled*(object_id: hid_t; are_disabled: ptr hbool_t): herr_t {.
    cdecl, importc: "H5Oare_mdc_flushes_disabled", dynlib: libname.}
##  Symbols defined for compatibility with previous versions of the HDF5 API.
##
##  Use of these symbols is deprecated.
##

when not defined(H5_NO_DEPRECATED_SYMBOLS):
  ##  Macros
  ##  Typedefs
  ##  A struct that's part of the H5G_stat_t structure (deprecated)
  type
    H5O_stat_t* = object
      size*: hsize_t           ##  Total size of object header in file
      free*: hsize_t           ##  Free space within object header
      nmesgs*: cuint           ##  Number of object header messages
      nchunks*: cuint          ##  Number of object header chunks

  ##  Function prototypes
